<resources>
    <string name="app_name">Bixa_alpha2</string>
    <string name="user">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="registrarse">¿No tienes cuenta?</string>
    <string name="REGISTRATE">Registrarse</string>
    <string name="Bienvenido">Hola, bienvenido de vuelta.</string>
    <string name="PrimeraVez">Hola, bienvenido a Bixa.</string>
    <string name="nombre">Nombre(s)</string>
    <string name="escribe_algo">Escribe algo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_despegable">MenuDespegable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>