<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFE"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imview_logo"
        android:layout_width="132dp"
        android:layout_height="131dp"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:contentDescription="Logo"
        app:srcCompat="@drawable/logo_bixa_completo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/Bienvenido"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginBottom="50dp"
        android:text="Ingresa para utilizar el asistente ">

    </TextView>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entrada_usuario_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp">

        <!--entrada_usuario_login-->
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/muli"
            android:background="@drawable/caja_rectangulo_redondeado"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/user"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:id="@+id/entrada_texto_contra_login"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        app:passwordToggleEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/muli"
            android:background="@drawable/caja_rectangulo_redondeado"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/boton_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#FFFF"
        android:background="@drawable/caja_boton"
        android:text="@string/login"
        android:textSize="18sp" />

    <!-- En el android:onClick="" debe ir el nombre de la funcion en Java que activara al tocarlo -->
</LinearLayout>