<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFE"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="69dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/logo_bixa_solo_letras" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/PrimeraVez"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            android:text="Registrate para utilizar el asistente "/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/muli"
                android:paddingTop="40dp"
                android:text="Por favor Ingresa\nuna foto de perfil:"
                android:textSize="18sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/FotoPerfilVista"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/circulo_foto_perfil"
                android:src="@drawable/ic_baseline_person_24"/>



        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entrada_Nombres_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/caja_rectangulo_redondeado"
                android:ems="10"
                android:fontFamily="@font/muli"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entrada_apellidos_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/caja_rectangulo_redondeado"
                android:ems="10"
                android:fontFamily="@font/muli"
                android:hint="Apellido(s)"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entrada_usuario_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/muli"
                android:background="@drawable/caja_rectangulo_redondeado"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:maxLength="10"
                android:hint="Nombre de usuario"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entrada_txf_pass_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/muli"
                android:background="@drawable/caja_rectangulo_redondeado"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entrada_txf_pass_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/caja_rectangulo_redondeado"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:fontFamily="@font/muli"
                android:maxLength="10"
                android:hint="Verificar contraseña"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/GrupoBotonesRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="Sexo: ">

            </TextView>

            <RadioButton
                android:id="@+id/boton_masc_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="Masculino">
            </RadioButton>

            <RadioButton
                android:id="@+id/boton_fem_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="Femenino">
            </RadioButton>

        </RadioGroup>

        <Button
            android:id="@+id/boton_registrarse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="25dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/caja_boton"
            android:text="@string/REGISTRATE"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>